Complete, no error handling.  Based on static response

--- a/src/client/css/index.css
+++ b/src/client/css/index.css
@@ -4,6 +4,7 @@ html, body {
 	height: 			100%;
 	margin: 			0px;
 	font-family:  		'Roboto', sans-serif;
+	background: 		#202020;
 }
 
 #Logo {
@@ -14,6 +15,7 @@ html, body {
 	top: 				50%;
 	margin-left: 		-308px;
 	margin-top: 		-75px;
+	opacity: 			0.0;
 }
 
 .LogoColor {
@@ -43,4 +45,49 @@ html, body {
 	margin-left: 		0px;
 	background: 		#F3F3F3;
 	border-radius: 		0px;
+}
+
+#events {
+	position: 			absolute;
+	width: 				400px;
+	height: 			145px;
+	margin: 			30px;
+	left: 				50%;		
+	top: 				50%;
+	color: 				#FFFFFF;
+	margin-left: 		-200px;
+	margin-top: 		-72.5px;
+	background: 		#F7F7F7;
+	border-radius: 		2px;
+	text-align: 		center;
+	z-index: 			100;
+}
+
+#events select {
+	width: 				calc( 100% - 30px );
+	border:				0px;
+	height: 			50px;
+	line-height: 		16px;
+	margin-top: 		15px;
+	font-size: 			16px;
+	outline: 			none;
+	padding: 			5px;
+	border: 			solid 1px #888;
+	background: 		#FFFFFF;
+	color: 				#888;
+}
+
+#eventSubmit {
+	background: 		#008C9E;
+	width: 				calc( 100% - 30px );
+	height: 			50px;
+	margin-top: 		15px;
+	margin-left: 		15px;
+	line-height: 		50px;
+	cursor: 			pointer;
+	border-radius: 		5px;
+}
+
+#eventSubmit:hover {
+	background: 		#007C8E;
 }
